--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 nn
 Natural Neighbours interpolation library
-Version 1.80
+Version 1.81
 
 Provides Natural Neighbours interpolation library "libnn.a" and a command line
 Natural Neighbours interpolation utility "nnbathy".
@@ -30,6 +30,10 @@ make tests
 Apart from the `nn' library, this code contains `nnbathy' -- a simple 
 interpolation utility/example based on `nn'.
 
+Initially, `nnbathy' has been introduced to provide an example of using library
+functions from `nn'. Later, evolving along with user requests, it became a quite
+functional command-line utility.
+
 There are a number of examples of using `nnbathy' in "examples" directory:
 
 examples/1 -- reconstruction of Franke test function
@@ -39,8 +43,13 @@ examples/4 -- reconstruction of topography from satellite altimeter data
 examples/5 -- reconstruction of topography from digitised contours
 examples/6 -- reconstruction of topography from digitised contours
 
-For a basic description of structures and functions available from `nn', have
-a look at "nn.h".
+These examples has been put up over a a number of years. Some of them used to
+cause failures for the older versions of the NN the interpolation code. See
+examples/README for descriptions.
+
+Calling `nn' code from a client code is supposed to be straightforward and 
+simple. Have a look at nnbathy.c for an example. For a basic description of 
+structures and functions available from `nn', have a look at "nn.h".
 
 Acknowledgments:
 
