--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v. 1.84, 25 January 2012
+        -- Cosmetic: modified descriptions of nnai and nnhpi.
 v. 1.83, 19 January 2012
         -- A cosmetic change to avoid compiler warning for delaunay.c
         -- Another cosmetic change - updated the list of structure names to be
